--- a/src/main/java/view/FrmFichaAluno.form
+++ b/src/main/java/view/FrmFichaAluno.form
@@ -2,7 +2,7 @@
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -218,7 +218,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Inter 18pt" size="26" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Sistemas de Informa&#xe7;&#xe3;o"/>
+        <Property name="text" type="java.lang.String" value="curso"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnVoltar">
